kubernetes/policies/require-approved-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-approved-registry

  annotations:
    policies.kyverno.io/title: Require Approved Image Registry
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Containers must use images from approved registries.

spec:
  validationFailureAction: Enforce

  background: true

  rules:
    - name: validate-workload-image-registry

      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job

      validate:
        message: "Container images must come from an approved registry."

        foreach:
          - list: "request.object.spec.template.spec.containers[]"
            pattern:
              image: "docker.io/* | quay.io/* | ghcr.io/* | public.ecr.aws/*"

    - name: validate-cronjob-image-registry

      match:
        any:
          - resources:
              kinds:
                - CronJob

      validate:
        message: "Container images must come from an approved registry."

        foreach:
          - list: "request.object.spec.jobTemplate.spec.template.spec.containers[]"
            pattern:
              image: "docker.io/* | quay.io/* | ghcr.io/* | public.ecr.aws/* | registry.k8s.io/*"
