kubernetes/policies/require-run-as-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-run-as-nonroot

  annotations:
    policies.kyverno.io/title: Require Non-Root Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Pods must explicitly run as non-root.

spec:
  validationFailureAction: Enforce

  background: true

  rules:
    - name: require-run-as-nonroot

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Pods must set securityContext.runAsNonRoot to true."

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
